3 December 2007
+ Fixed delete link in document listing.
+ If no title is entered for a document, it uses the file name.

29 November 2007
+ Delete link in image selection works again.
+ Moved scripts out of head.js and into their own files.
+ Updated: javascript/folder_contents/head.js,
           javascript/folder_contents/scripts.js,
           javascript/pick_image/head.js,
           javascript/pick_image/scripts.js


26 November 2007
+ Fixed multimedia generic thumbnail copying.

12 November 2007
+ Added image height limits to standardize the image manager selection
screen.
+ Updated: templates/style.css

9 November 2007
+ Added a crop threshold to the cropping function. If the pixel
  difference between the old image and the new is less than the
  threshold, the crop will not occur.
+ Images makeThumbnail function will now properly copy the image to
  the tn directory if it is under the thumbnail size.
+ Updated: templates/settings.tpl

25 October 2007
+ Fixed clear Image link. Wasn't returning clear image to correct
  size.
+ Updated: javascript/clear_image/body.js, javascript/clear_image/head.js

Version 1.3.0
---------------------------------------------------------------------
4 October 2007
+ Fixed problems with presizing images.
+ Fixed permissioning problems with folders.
+ Added delete image option to image viewer.
+ Updated: templates/manager/pick.tpl, templates/style.css

3 October 2007
+ Added module_created column to folders table to track which module
  made the folder.
+ Fifth parameter added to Cabinet::imageManager function. If true,
  then the image manager will only show folders created by the current
  module.
+ Users can access image folders without having to have File Cabinet
  permission.
+ Private folders give a warning instead of a 404.
+ Can now set whether general user folder views will show resized
  images along with their parents.
+ Folders are private by default now.
+ Folder title in list view is linkable as well as icon.